@@ -1,78 +1,0 @@
-# -*- coding: utf-8 -*-
-import datetime
-from south.db import db
-from south.v2 import SchemaMigration
-from django.db import models
-
-
-class Migration(SchemaMigration):
-
-    def forwards(self, orm):
-        # Adding model 'TwitterRecentEntries'
-        db.create_table('cmsplugin_twitterrecententries', (
-            ('cmsplugin_ptr', self.gf('django.db.models.fields.related.OneToOneField')(to=orm['cms.CMSPlugin'], unique=True, primary_key=True)),
-            ('title', self.gf('django.db.models.fields.CharField')(max_length=75, blank=True)),
-            ('twitter_user', self.gf('django.db.models.fields.CharField')(max_length=75)),
-            ('count', self.gf('django.db.models.fields.PositiveSmallIntegerField')(default=3)),
-            ('link_hint', self.gf('django.db.models.fields.CharField')(max_length=75, blank=True)),
-        ))
-        db.send_create_signal('twitter', ['TwitterRecentEntries'])
-
-        # Adding model 'TwitterSearch'
-        db.create_table('cmsplugin_twittersearch', (
-            ('cmsplugin_ptr', self.gf('django.db.models.fields.related.OneToOneField')(to=orm['cms.CMSPlugin'], unique=True, primary_key=True)),
-            ('title', self.gf('django.db.models.fields.CharField')(max_length=75, blank=True)),
-            ('query', self.gf('django.db.models.fields.CharField')(default='', max_length=200, blank=True)),
-            ('count', self.gf('django.db.models.fields.PositiveSmallIntegerField')(default=3)),
-        ))
-        db.send_create_signal('twitter', ['TwitterSearch'])
-
-
-    def backwards(self, orm):
-        # Deleting model 'TwitterRecentEntries'
-        db.delete_table('cmsplugin_twitterrecententries')
-
-        # Deleting model 'TwitterSearch'
-        db.delete_table('cmsplugin_twittersearch')
-
-
-    models = {
-        'cms.cmsplugin': {
-            'Meta': {'object_name': 'CMSPlugin'},
-            'changed_date': ('django.db.models.fields.DateTimeField', [], {'auto_now': 'True', 'blank': 'True'}),
-            'creation_date': ('django.db.models.fields.DateTimeField', [], {'default': 'datetime.datetime.now'}),
-            'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
-            'language': ('django.db.models.fields.CharField', [], {'max_length': '15', 'db_index': 'True'}),
-            'level': ('django.db.models.fields.PositiveIntegerField', [], {'db_index': 'True'}),
-            'lft': ('django.db.models.fields.PositiveIntegerField', [], {'db_index': 'True'}),
-            'parent': ('django.db.models.fields.related.ForeignKey', [], {'to': "orm['cms.CMSPlugin']", 'null': 'True', 'blank': 'True'}),
-            'placeholder': ('django.db.models.fields.related.ForeignKey', [], {'to': "orm['cms.Placeholder']", 'null': 'True'}),
-            'plugin_type': ('django.db.models.fields.CharField', [], {'max_length': '50', 'db_index': 'True'}),
-            'position': ('django.db.models.fields.PositiveSmallIntegerField', [], {'null': 'True', 'blank': 'True'}),
-            'rght': ('django.db.models.fields.PositiveIntegerField', [], {'db_index': 'True'}),
-            'tree_id': ('django.db.models.fields.PositiveIntegerField', [], {'db_index': 'True'})
-        },
-        'cms.placeholder': {
-            'Meta': {'object_name': 'Placeholder'},
-            'default_width': ('django.db.models.fields.PositiveSmallIntegerField', [], {'null': 'True'}),
-            'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
-            'slot': ('django.db.models.fields.CharField', [], {'max_length': '50', 'db_index': 'True'})
-        },
-        'twitter.twitterrecententries': {
-            'Meta': {'object_name': 'TwitterRecentEntries', 'db_table': "'cmsplugin_twitterrecententries'", '_ormbases': ['cms.CMSPlugin']},
-            'cmsplugin_ptr': ('django.db.models.fields.related.OneToOneField', [], {'to': "orm['cms.CMSPlugin']", 'unique': 'True', 'primary_key': 'True'}),
-            'count': ('django.db.models.fields.PositiveSmallIntegerField', [], {'default': '3'}),
-            'link_hint': ('django.db.models.fields.CharField', [], {'max_length': '75', 'blank': 'True'}),
-            'title': ('django.db.models.fields.CharField', [], {'max_length': '75', 'blank': 'True'}),
-            'twitter_user': ('django.db.models.fields.CharField', [], {'max_length': '75'})
-        },
-        'twitter.twittersearch': {
-            'Meta': {'object_name': 'TwitterSearch', 'db_table': "'cmsplugin_twittersearch'", '_ormbases': ['cms.CMSPlugin']},
-            'cmsplugin_ptr': ('django.db.models.fields.related.OneToOneField', [], {'to': "orm['cms.CMSPlugin']", 'unique': 'True', 'primary_key': 'True'}),
-            'count': ('django.db.models.fields.PositiveSmallIntegerField', [], {'default': '3'}),
-            'query': ('django.db.models.fields.CharField', [], {'default': "''", 'max_length': '200', 'blank': 'True'}),
-            'title': ('django.db.models.fields.CharField', [], {'max_length': '75', 'blank': 'True'})
-        }
-    }
-
-    complete_apps = ['twitter']
