@@ -1,1 +1,0 @@
-{% include "cms/plugins/twitter_recent_entries.html" %}
