@@ -95,7 +95,6 @@ def configure(db_url, **extra):
             'cms.plugins.googlemap',
             'cms.plugins.teaser',
             'cms.plugins.video',
-            'cms.plugins.twitter',
             'cms.plugins.inherit',
             'cms.test_utils.project.sampleapp',
             'cms.test_utils.project.placeholderapp',
