@@ -191,4 +191,5 @@ Please see Install/2.4 release notes *before* attempting to upgrade to version 2
 - PlaceholderAdmin does not have LanguageTabs anymore. It only has a PluginAPI now.
 - PageAdmin uses the same Plugin API as PlaceholderAdmin
 - Toolbar API for your own apps added
+- twitter plugin removed
 
